fix overflow issue;

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -37,6 +37,8 @@
     & > .row {
       margin-right: 0;
       margin-left: 0;
+      max-width: 100%;
+      
       & > .col-12 {
         padding: 0;
       }
